Gallery Block: Stop reflows from breaking custom alignment layouts. (#17586)

--- a/packages/block-library/src/gallery/style.scss
+++ b/packages/block-library/src/gallery/style.scss
@@ -135,14 +135,6 @@
 		width: 100%;
 	}
 
-	// Keep the display property consistent when alignments are applied
-	// to preserve columns
-	&.alignleft,
-	&.aligncenter,
-	&.alignright {
-		display: flex;
-	}
-
 	// If the gallery is centered, center the content inside as well.
 	&.aligncenter {
 		.blocks-gallery-item figure {
